// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FieldRadios__Radios /> should render correctly 1`] = `
<ChoiceGroup
  className=""
  options={Array []}
/>
`;

exports[`FieldSelect should render correctly 1`] = `
<div>
  <FieldRadios__Radios
    errorMessage=""
    name="test name"
    onChange={[Function]}
    options={
      Array [
        Object {
          "key": "key1",
          "text": "text 1",
        },
        Object {
          "key": "key2",
          "text": "text 2",
        },
        Object {
          "key": "key3",
          "text": "text 3",
        },
      ]
    }
    selectedKey=""
  />
</div>
`;

exports[`Radios should render properly when errorMessage 1`] = `
.c0 .ms-ChoiceField-field::before {
  border-color: #a80000;
}

<ChoiceGroup
  className="c0"
  errorMessage="test error"
  options={Array []}
/>
`;

exports[`Radios should render properly when no errorMessage 1`] = `
<ChoiceGroup
  className=""
  errorMessage={null}
  options={Array []}
/>
`;
